# Android-AudioPlayer

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/timeapp/shawn/voiceplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/songstudio/: CMakeLists.txt  MusicDecoder.cpp  SoundTrackController.cpp  com_timeapp_shawn_voiceplay_audiotrack_MusicDecoder.h  com_timeapp_shawn_voiceplay_opensles_SoundTrackController.h
app/src/main/cpp/songstudio/libcommon/: CMakeLists.txt
app/src/main/cpp/songstudio/libmedia/: CMakeLists.txt  sound_service.cpp  sound_service.h
app/src/main/cpp/songstudio/libmusicdecoder/: CMakeLists.txt  accompany_decoder_controller.cpp
app/src/main/java/com/timeapp/shawn/voiceplay/: MainActivity.java
app/src/main/java/com/timeapp/shawn/voiceplay/audiotrack/: Mp3Decoder.java  MusicDecoder.java  NativeMp3Player.java  NativeMp3PlayerController.java
app/src/main/java/com/timeapp/shawn/voiceplay/opensles/: SoundTrackController.java
app/src/main/java/com/timeapp/shawn/voiceplay/utils/: LogUtils.java  SDCardUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/timeapp/shawn/voiceplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
